:pencil2: Docs: パンくずリストのドキュメント作成

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -34,25 +34,7 @@
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <main>
-      <h1>吾輩は猫である。名前はまだ無い。</h1>
-      <nav aria-label="Breadcrumb">
-        <ol itemscope itemtype="http://schema.org/BreadcrumbList">
-          <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="/" itemprop="item"><span itemprop="name">第一階層</span></a>
-            <meta itemprop="position" content="1" />
-          </li>
-          <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="/standards/example.html" itemprop="item"><span itemprop="name">第二階層</span></a>
-            <meta itemprop="position" content="2" />
-          </li>
-          <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem" aria-current="page">
-            <a href="/example.html" itemprop="item"><span itemprop="name">第三階層</span></a>
-            <meta itemprop="position" content="3" />
-          </li>
-        </ol>
-      </nav>
-    </main>
+    <main><h1>吾輩は猫である。名前はまだ無い。</h1></main>
 
     <script src="/js/main.js"></script>
   </body>
