:up: Chore: Browserslist、他の依存パッケージのアップデート

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -34,7 +34,9 @@
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <main> <h1>吾輩は猫である。名前はまだ無い。</h1> </main>
+    <main>
+      <h1>吾輩は猫である。名前はまだ無い。</h1>
+    </main>
 
     <script src="/js/bundle.js"></script>
     <script src="/js/main.js"></script>
