--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -36,6 +36,10 @@
   <body>
     <main>
       <h1>吾輩は猫である。名前はまだ無い。</h1>
+      <a class="p-btn" href="#">CLICK ME</a>
+      <a class="p-btn -primary" href="#">CLICK ME</a>
+      <a class="p-btn -outline" href="#">CLICK ME</a>
+      <a class="p-btn -primary -outline" href="#">CLICK ME</a>
     </main>
 
     <script src="/js/bundle.js"></script>
