--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -36,9 +36,17 @@
   <body>
     <main>
       <h1>吾輩は猫である。名前はまだ無い。</h1>
-      <a class="p-btn" href="#">CLICK ME</a>
-      <a class="p-btn -primary" href="#">CLICK ME</a>
-      <a class="p-btn -outline" href="#">CLICK ME</a>
+      <div class="drawer" id="drawer" aria-hidden="true">
+        <div class="drawer_backdrop js-drawer-dismiss"></div>
+        <nav class="drawer_nav">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Settings</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <a class="p-btn -outline js-drawer" href="#" aria-expanded="false" aria-controls="drawer">CLICK ME</a>
       <a class="p-btn -primary -outline" href="#">CLICK ME</a>
     </main>
 
