:sparkles: Add: cross-env の追加、Windows 用に環境変数の設定変更

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,51 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>World Wide Web Consortium (W3C)</title>
-<meta name="description" content="The World Wide Web Consortium (W3C) is an international community where Member organizations, a full-time staff, and the public work together to develop Web standards.">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="format-detection" content="telephone=no">
-<meta property="og:title" content="World Wide Web Consortium (W3C)">
-<meta property="og:description" content="The World Wide Web Consortium (W3C) is an international community where Member organizations, a full-time staff, and the public work together to develop Web standards.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://www.w3.org/">
-<meta property="og:image" content="http://xxxxxxx/og.png">
-<meta property="fb:app_id" content="＊＊＊＊">
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="World Wide Web Consortium (W3C)">
-<meta name="twitter:description" content="The World Wide Web Consortium (W3C) is an international community where Member organizations, a full-time staff, and the public work together to develop Web standards.">
-<meta name="twitter:url" content="https://www.w3.org/">
-<meta name="twitter:image" content="http://xxxxxxx/twitter_card.png">
-<link rel="shortcut icon" href="/favicon.ico">
-<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-<link rel="canonical" href="https://www.w3.org/">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>World Wide Web Consortium (W3C)</title>
+    <meta
+      name="description"
+      content="The World Wide Web Consortium (W3C) is an international community where Member organizations, a full-time staff, and the public work together to develop Web standards."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta property="og:title" content="World Wide Web Consortium (W3C)" />
+    <meta
+      property="og:description"
+      content="The World Wide Web Consortium (W3C) is an international community where Member organizations, a full-time staff, and the public work together to develop Web standards."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.w3.org/" />
+    <meta property="og:image" content="http://xxxxxxx/og.png" />
+    <meta property="fb:app_id" content="＊＊＊＊" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="World Wide Web Consortium (W3C)" />
+    <meta
+      name="twitter:description"
+      content="The World Wide Web Consortium (W3C) is an international community where Member organizations, a full-time staff, and the public work together to develop Web standards."
+    />
+    <meta name="twitter:url" content="https://www.w3.org/" />
+    <meta name="twitter:image" content="http://xxxxxxx/twitter_card.png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="canonical" href="https://www.w3.org/" />
 
-<link rel="stylesheet" href="/css/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/css/main.css" />
+  </head>
+  <body>
+    <main>
+      <div class="p-loader js-loader" data-target=".p-loader_spinner">
+        <div class="p-loader_spinner c-spinner" role="status" aria-busy="true"
+          ><span class="visually-hidden">Loading...</span></div
+        >
+      </div>
+      <h1>吾輩は猫である。名前はまだ無い。</h1>
+      <div class="drawer" id="drawer" aria-hidden="true">
+        <div class="drawer_backdrop js-drawer-dismiss"></div>
+        <nav class="drawer_nav">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Settings</a></li>
+          </ul>
+        </nav>
+      </div>
 
-<main>
-  <div class="p-loader js-loader" data-target=".p-loader_spinner">
-    <div class="p-loader_spinner c-spinner" role="status" aria-busy="true"><span class="visually-hidden">Loading...</span></div>
-  </div>
-  <h1>吾輩は猫である。名前はまだ無い。</h1>
-  <div class="drawer" id="drawer" aria-hidden="true">
-  <div class="drawer_backdrop js-drawer-dismiss"></div>
-  <nav class="drawer_nav">
-    <ul>
-      <li><a href="">Home</a></li>
-      <li><a href="">Settings</a></li>
-    </ul>
-  </nav>
-</div>
+      <a class="p-btn -outline js-drawer" href="#" aria-expanded="false" aria-controls="drawer">CLICK ME</a>
+      <a class="p-btn -primary -outline" href="#">CLICK ME</a>
+    </main>
 
-  <a class="p-btn -outline js-drawer" href="#" aria-expanded="false" aria-controls="drawer">CLICK ME</a>
-  <a class="p-btn -primary -outline" href="#">CLICK ME</a>
-</main>
-
-<script src="/js/bundle.js"></script>
-<script src="/js/main.js"></script>
-</body>
+    <script src="/js/bundle.js"></script>
+    <script src="/js/main.js"></script>
+  </body>
 </html>
