:wastebasket: Remove: ボタンコンポーネントの削除

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -51,8 +51,7 @@
         </nav>
       </div>
 
-      <a class="p-btn -outline js-drawer" href="#" aria-expanded="false" aria-controls="drawer">CLICK ME</a>
-      <a class="p-btn -primary -outline" href="#">CLICK ME</a>
+      <a class="js-drawer" href="#" aria-expanded="false" aria-controls="drawer">CLICK ME</a>
     </main>
 
     <script src="/js/bundle.js"></script>
